# modelfoundry

./: .envrc.prev  .gitignore  .gitignore.prev  .project-guide.yml  CHANGELOG.md  README.md  environment.yml  pyproject.toml  pyve.toml  requirements-dev.txt  requirements-test.txt  requirements-typecheck.txt
.github/workflows/: ci.yml  publish.yml
.pyve/: config
docs/project-guide/: go.md
docs/specs/: advanced-and-probabilistic-requirements.md  concept.md  consumer-gap-analysis.md  consumer-gap-analysis2.md  consumer-gap-solutions.md  datarefinery-audio-feature-persistence.md  env-dependencies.md  features.md  modelfoundry-audio-feature-consumption.md  phase-i-subphase-1-audio-feature-consumption-plan.md  phase-i-subphase-2-feature-code-reconciliation-plan.md  phase-i-subphase-3-generative-probabilistic-backend-plan.md  project-essentials.md  stories.md  subphase-h-1-advanced-probabilistic-plan.md  tech-spec.md
docs/spikes/: A.c-datarefinery-binding.md  C.a-pytorch-determinism.md  I.a-segmented-recipe-identity.md  I.aa-hmmlearn-integration.md
recipes/: advanced_encoder_lora.yml  cifar10-base.yaml  cifar10_cnn.yml  cifar10_mc_dropout.yml  cifar10_mlp.yml  cifar10_random.yml  cifar10_resnet20.yml  cifar10_resnet20_canonical.yml
scripts/: spike_datarefinery_binding.py  spike_hmmlearn.py  spike_pytorch_determinism.py  spike_segmented_identity.py
scripts/examples/: add_mf_image_path_sidecar.py  test_mlp_baseline.py  test_models_resnet20.py  test_models_resnet20_fix.py  test_random_classifier.py
scripts/experiments/: budget_crossover.md  budget_crossover.py  budget_crossover_results.md  canonical_benchmark.md  canonical_comparison.py  canonical_comparison_results.md  canonical_scale_ladder.py  canonical_scale_ladder_results.md  full_data_crossover.md  full_data_crossover.py  full_data_crossover_results.md  hf_boundary_spike.md  hf_boundary_spike.py  hf_input_contract_spike.md  hf_input_contract_spike.py  overfit_diagnostic.py  overfit_diagnostic_results.md  postfix_ladder.md  postfix_ladder.py  postfix_ladder_results.md  regime_comparison.md  regime_comparison.py  regime_comparison_results.md  scale_crossover.md  scale_crossover.py  scale_crossover_results.md  test_budget_crossover.py  test_full_data_crossover.py  test_regime_comparison.py  test_scale_crossover.py  verify_confusion_matrix.py
src/modelfoundry/: __init__.py  __main__.py  _version.py  logging.py
tests/: conftest.py
tests/cli/: conftest.py  test_app.py  test_check_cmd.py  test_clean_cmd.py  test_cli_check.py  test_cli_clean.py  test_cli_init.py  test_cli_inspect.py  test_cli_materialize.py  test_cli_report.py  test_cli_status.py  test_cli_validate.py  test_init_cmd.py  test_inspect_cmd.py  test_materialize_cmd.py  test_report_cmd.py  test_status_cmd.py  test_validate_cmd.py
tests/contract/: test_env_topology.py
tests/integration/: test_audio_mc_dropout.py  test_audio_real_dr.py  test_cifar10_resnet20.py  test_cifar10_smoke.py  test_determinism.py  test_example_recipes.py  test_failing_expectations.py  test_loose_coupling.py  test_materialize_runner.py  test_mc_dropout_evaluation.py  test_modelfoundry_api.py  test_pretrained_encoder.py  test_pretrained_encoder_gating.py  test_pytorch_evaluation.py  test_pytorch_optimization.py  test_pytorch_plugin_registration.py  test_pytorch_round_trip.py  test_pytorch_trainer.py  test_random_baseline.py  test_round_trip.py  test_sklearn_baseline.py
tests/notebook/: test_jupyter_smoke.py
tests/plugin_contract/: test_pytorch_contract.py  test_random_baseline_contract.py  test_sklearn_baseline_contract.py
tests/unit/: test_atomic_promote.py  test_audio_fixture_foundation.py  test_bundled_recipes_committed.py  test_cache_cleaner.py  test_cache_identity.py  (+46 more)
(+115 files in other folders)
